# langgraph-example-agent

./: .env.example  .gitignore  AUDIT.md  CLAUDE.md  README.md  pyproject.toml
app/: config.py  errors.py  exceptions.py  main.py  middleware.py  schemas.py
app/agent/: domain.py  edges.py  graph.py  nodes.py  prompts.py  state.py  tool_emulation.py
app/agent/prompts/: __init__.py  system.md
app/domain/: __init__.py
app/domain/restaurant/: __init__.py  prompt.md  state.py  tools.py  ui_hints.py
app/mcp/: client.py
app/narration/: __init__.py  adapter.py  consumer.py
app/registries/: mcp_registry.py  tool_registry.py
app/routers/: agent.py  health.py
app/services/: agent_service.py  llm_service.py  mcp_service.py
app/tools/: __init__.py  agui_demo_tools.py  calculator.py  calendar.py  calendar_tools.py  email_tools.py  math_tools.py  restaurant_tools.py  web_search.py
tests/: conftest.py  test_api.py  test_calculator.py  test_calendar_tools.py  test_config_misc.py  test_errors.py  test_graph.py  test_math_tools.py  test_mcp_service.py  test_middleware.py  test_restaurant_tools.py  test_tool_emulation.py
v2/: main.py
v2/narration/: __init__.py  adapter.py  consumer.py  events.py
v2/tools/: __init__.py  calendar_tools.py  math_tools.py
web/: app.js  escape.js  frontend-tools.js  icons.js  index.html  markdown.js  styles.css  ui-components.js
