[project]
name = "langgraph-private-agent"
version = "0.1.0"
description = "Base enxuta para agente LangGraph com tools privadas e MCP opcional"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.136.3",
  "uvicorn[standard]>=0.48.0",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.1",
  "langgraph>=1.2.2",
  "langchain-core>=1.4.0",
  "langchain-mcp-adapters>=0.2.2",
  "google-genai>=2.7.0",
  "httpx>=0.28.1",
  "langchain-google-genai>=4.2.4",
  "langchain-openai>=1.2.2"
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "pytest-asyncio>=1.4.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
