[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "my-agent"
version = "0.2.0"
description = "Implementação oficial do protocolo AG-UI sobre LangGraph (FastAPI), com MCP opcional"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.136.3",
  "uvicorn[standard]>=0.48.0",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.1",
  "langgraph>=1.2.2",
  "langchain-core>=1.4.0",
  "langchain-mcp-adapters>=0.2.2",
  "google-genai>=2.7.0",
  "httpx>=0.28.1",
  "langchain-google-genai>=4.2.4",
  "ag-ui-langgraph[fastapi]>=0.0.37"
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "pytest-asyncio>=1.4.0"]
# Providers de LLM são opcionais: instale só o do provider escolhido em LLM_PROVIDER.
# google já está nas deps centrais (provider default). O extra `openai` também atende o
# provider `custom` (proxy OpenAI-compatível).
openai = ["langchain-openai>=0.3"]
anthropic = ["langchain-anthropic>=0.3"]
ollama = ["langchain-ollama>=0.3"]

# Apenas o pacote `app` é distribuível. `web/` (estáticos servidos em runtime) e `tests/`
# não são pacotes Python — declarar explicitamente evita o erro de auto-discovery do
# setuptools (flat-layout com múltiplos diretórios no topo: `app` e `web`).
[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
